--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "express": "^5.1.0",
     "framer-motion": "^12.15.0",
     "gh-pages": "^6.3.0",
     "lodash.debounce": "^4.0.8",
